--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-bootstrap": "^2.10.6",
+    "react-dom": "^18.3.1",
+    "react-loading-overlay-ts": "^2.0.2",
+    "react-router-dom": "^7.0.2",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^10.0.6",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
