Adding email sending part

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGO_URI="mongodb+srv://projectcodehut:NCzPGvNBASHQ9EY7@book-exchange.gsyxy.mongodb.net/?retryWrites=true&w=majority&appName=Book-exchange"
+EMAIL="projectcodehut@gmail.com"
+EMAIL_PASSWORD="06012000**CodeHut"
