--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "express": "^4.21.2",
     "mongoos": "^0.0.1-security",
     "mongoose": "^8.8.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
