ready for deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 MONGO_URI="mongodb+srv://projectcodehut:NCzPGvNBASHQ9EY7@book-exchange.gsyxy.mongodb.net/?retryWrites=true&w=majority&appName=Book-exchange"
 EMAIL="nj223948"
 EMAIL_PASSWORD="ldqd fxlp blqk jwlb"
+PRODUCTION_FRONTEND_ORIGIN="https://bookbride-bookexchange.netlify.app"
+DEVELOPMENT_FRONTEND_ORIGIN="http://localhost:5173/"
+IS_PRODUCTION=false
