update production files

--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,4 @@ EMAIL="nj223948"
 EMAIL_PASSWORD="ldqd fxlp blqk jwlb"
 PRODUCTION_FRONTEND_ORIGIN="https://bookbride-bookexchange.netlify.app"
 DEVELOPMENT_FRONTEND_ORIGIN="http://localhost:5173/"
-IS_PRODUCTION=false
+IS_PRODUCTION=true
